--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -10,9 +10,11 @@
 	</head>
 	<body>
 
+
+
 		<header>
 			<div class="container">
-				<h1>Aparecida Nutrição</h1>
+				<h1 class="titulo">Aparecida Nutrição</h1>
 			</div>
 		</header>
 		<main>
@@ -73,5 +75,6 @@
 			</section>
 		</main>
 
+	<script src="js/main.js">	</script>
 	</body>
 </html>
