--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -99,6 +99,8 @@
 		    </form>
 		</section>
 
-	<script src="js/main.js">	</script>
+	<script src="js/calcula-imc.js">	</script>
+	<script src="js/form.js">	</script>
+
 	</body>
 </html>
