--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -64,7 +64,7 @@
 						</tr>
 						<tr class="paciente" >
 							<td class="info-nome">Tatiana</td>
-							<td class="info-peso">46</td>
+							<td class="info-peso">-46</td>
 							<td class="info-altura">1.55</td>
 							<td class="info-gordura">19</td>
 							<td class="info-imc">0</td>
@@ -77,6 +77,7 @@
 
 		<section class="container">
 		    <h2 id="titulo-form">Adicionar novo paciente</h2>
+			 <span id="mensagem-erro"></span>
 		    <form id="form-adiciona">
 		        <div class="">
 		            <label for="nome">Nome:</label>
