--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -34,7 +34,7 @@
 						<tr class="paciente" id="primeiro-paciente">
 							<td class="info-nome">Paulo</td>
 							<td class="info-peso">100</td>
-							<td class="info-altura">4.00</td>
+							<td class="info-altura">2.00</td>
 							<td class="info-gordura">10</td>
 							<td class="info-imc">0</td>
 						</tr>
@@ -42,7 +42,7 @@
 						<tr class="paciente" >
 							<td class="info-nome">João</td>
 							<td class="info-peso">80</td>
-							<td class="info-altura">4.72</td>
+							<td class="info-altura">1.72</td>
 							<td class="info-gordura">4</td>
 							<td class="info-imc">0</td>
 						</tr>
@@ -64,7 +64,7 @@
 						</tr>
 						<tr class="paciente" >
 							<td class="info-nome">Tatiana</td>
-							<td class="info-peso">-46</td>
+							<td class="info-peso">46</td>
 							<td class="info-altura">1.55</td>
 							<td class="info-gordura">19</td>
 							<td class="info-imc">0</td>
@@ -77,7 +77,8 @@
 
 		<section class="container">
 		    <h2 id="titulo-form">Adicionar novo paciente</h2>
-			 <span id="mensagem-erro"></span>
+			 <ul id="mensagens-erro">
+			 </ul>
 		    <form id="form-adiciona">
 		        <div class="">
 		            <label for="nome">Nome:</label>
@@ -102,6 +103,7 @@
 
 	<script src="js/calcula-imc.js">	</script>
 	<script src="js/form.js">	</script>
+	<script src="js/remover-paciente.js"></script>
 
 	</body>
 </html>
