--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -73,7 +73,7 @@
 						</tr>
 					</tbody>
 				</table>
-
+				<button id="buscar-pacientes" class="botao bto-principal">Buscar Pacientes</button>
 			</section>
 		</main>
 
@@ -107,6 +107,7 @@
 	<script src="js/form.js">	</script>
 	<script src="js/remover-paciente.js"></script>
 	<script src="js/filtra.js"></script>
+	<script src="js/buscar-pacientes.js"></script>
 
 	</body>
 </html>
