--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 
+
 	</head>
 	<body>
-
-
 
 		<header>
 			<div class="container">
@@ -20,6 +19,7 @@
 		<main>
 			<section class="container">
 				<h2>Meus pacientes</h2>
+
 				<label for="filtrar-tabela">Filtre</label>
 				<input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o nome do paciente">
 				<table>
@@ -34,7 +34,7 @@
 					</thead>
 					<tbody id="tabela-pacientes">
 						<tr class="paciente" id="primeiro-paciente">
-							<td class="info-nome">Paulo</td>
+							<td class="info-nome" >Paulo</td>
 							<td class="info-peso">100</td>
 							<td class="info-altura">2.00</td>
 							<td class="info-gordura">10</td>
@@ -45,7 +45,7 @@
 							<td class="info-nome">João</td>
 							<td class="info-peso">80</td>
 							<td class="info-altura">1.72</td>
-							<td class="info-gordura">4</td>
+							<td class="info-gordura">40</td>
 							<td class="info-imc">0</td>
 						</tr>
 
@@ -73,16 +73,16 @@
 						</tr>
 					</tbody>
 				</table>
+				<span id="erro-ajax" class="invisivel">Erro ao buscar os pacientes</span>
 				<button id="buscar-pacientes" class="botao bto-principal">Buscar Pacientes</button>
 			</section>
 		</main>
 
 		<section class="container">
 		    <h2 id="titulo-form">Adicionar novo paciente</h2>
-			 <ul id="mensagens-erro">
-			 </ul>
+			 <ul id="mensagens-erro"></ul>
 		    <form id="form-adiciona">
-		        <div class="">
+		        <div class="grupo">
 		            <label for="nome">Nome:</label>
 		            <input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
 		        </div>
@@ -96,18 +96,17 @@
 		        </div>
 		        <div class="grupo">
 		            <label for="gordura">% de Gordura:</label>
-		            <input id="gordura" type="text" placeholder="digite a porcentagem de gordura do seu paciente" class="campo campo-medio">
+		            <input id="gordura" name="gordura" type="text" placeholder="digite a porcentagem de gordura do seu paciente" class="campo campo-medio">
 		        </div>
 
 		        <button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
 		    </form>
 		</section>
 
-	<script src="js/calcula-imc.js">	</script>
-	<script src="js/form.js">	</script>
-	<script src="js/remover-paciente.js"></script>
-	<script src="js/filtra.js"></script>
-	<script src="js/buscar-pacientes.js"></script>
-
+		<script src="js/calcula-imc.js">	</script>
+		<script src="js/form.js">	</script>
+		<script src="js/remove-paciente.js"></script>
+		<script src="js/filtra.js"></script>
+		<script src="js/buscar-pacientes.js"></script>
 	</body>
 </html>
